- Support inline prefix, but not yet working on IE - Fix IE bug with buttons wrapping to new lines due to excess padding

--- a/scss/rrssb.scss
+++ b/scss/rrssb.scss
@@ -94,7 +94,6 @@ $rrssb-border: (100% - $rrssb-icon-ratio)/2;
   }
 
   .rrssb-prefix {
-    display: inline-block;
     padding-right: 0.6em;
   }
 
